# testing_in_c

./: .gitignore  LICENSE  README.md
ctest/: CMakeLists.txt
ctest/src/: CMakeLists.txt  triangle.c  triangle.h
ctest/test/: CMakeLists.txt  test_boundary_value.c  test_decision_table.c  test_equivalence.c  test_triangle.c
cunit/: CMakeLists.txt
cunit/CUnit/: Jamrules  aclocal.m4  config.h  config.h.in  config.status  configure  configure~  cunit.pc  libtool
cunit/CUnit/CUnit/Sources/: libcunit.la
cunit/CUnit/CUnit/Sources/.libs/: libcunit.1.dylib  libcunit.lai
cunit/CUnit/CUnit/Sources/Automated/: libcunitautomated.la
cunit/CUnit/CUnit/Sources/Automated/.deps/: Automated.Plo
cunit/CUnit/CUnit/Sources/Basic/: libcunitbasic.la
cunit/CUnit/CUnit/Sources/Basic/.deps/: Basic.Plo
cunit/CUnit/CUnit/Sources/Console/: libcunitconsole.la
cunit/CUnit/CUnit/Sources/Console/.deps/: Console.Plo
cunit/CUnit/CUnit/Sources/Framework/: libcunitfmk.la
cunit/CUnit/CUnit/Sources/Framework/.deps/: CUError.Plo  MyMem.Plo  TestDB.Plo  TestRun.Plo  Util.Plo
cunit/CUnit/autom4te.cache/: output.0  output.1  output.2  requests  traces.1  traces.2
cunit/src/: triangle.h
cunit/test/: CMakeLists.txt  test_triangle.c
no_tests/src/: triangle.c
unity/: CMakeLists.txt
unity/src/: CMakeLists.txt
unity/test/: CMakeLists.txt  test_boundary_value.c  test_decision_table.c  test_equivalence.c  test_triangle.c
